fetching json data using loader the 2.0 verson of async task .

--- a/app/src/main/res/layout/layout.xml
+++ b/app/src/main/res/layout/layout.xml
@@ -8,11 +8,13 @@
         android:id="@+id/location"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp" />
+        android:layout_marginLeft="50dp"
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/cases"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="50dp"/>
+        android:layout_marginLeft="50dp"
+        android:textSize="18sp" />
 </LinearLayout>
